--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2016",
-		"module": "ES2020",
+		"module": "CommonJS",
 		"rootDir": "./src",
 		"outDir": "./build",
 		"esModuleInterop": true,
@@ -10,5 +10,9 @@
 		"strict": true,
 		"skipLibCheck": true
 	},
-	"include": ["src"]
+	"ts-node": {
+		"esm": true,
+		"experimentalSpecifierResolution": "node"
+	},
+	"include": ["src/**/*.ts"]
 }
