--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
 		"build": "npx tsc"
 	},
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"mysql2": "^3.3.3",
+		"sequelize": "^6.32.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.2.5",
+		"@types/sequelize": "^4.28.15",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.1.3"
 	}
