--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
 		"forceConsistentCasingInFileNames": true,
 		"sourceMap": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"experimentalDecorators": true
 	},
 	"ts-node": {
 		"esm": true,
 		"experimentalSpecifierResolution": "node"
 	},
-	"include": ["src/**/*.ts"]
+	"include": ["src"]
 }
