--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"cookie-parser": "^1.4.6",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
 		"mysql2": "^3.3.3",
@@ -20,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.2.5",
