--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"build": "npx tsc"
 	},
 	"dependencies": {
+		"@types/joi": "^17.2.3",
 		"bcrypt": "^5.1.0",
 		"cookie-parser": "^1.4.6",
 		"express": "^4.18.2",
+		"joi": "^17.9.2",
 		"jsonwebtoken": "^9.0.0",
 		"mysql2": "^3.3.3",
 		"passport": "^0.6.0",
